SERVER-38722 Make CollectionCloner tolerate QueryPlanKilled error on collection drop.